# semantic-intel

./: README.md  pyproject.toml
notebooks/: emdeddings.ipynb
scripts/: clean_opinions.py  fetch_opinions.py
