[tool.poetry]
name = "semantic-intel"
version = "0.0.1"
description = "what did he mean by that"
authors = ["honeykjoule <honeykjoule@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
requests = "^2.31.0"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
cohere = "^4.33"
python-dotenv = "^1.0.0"
nomic = "^2.0.14"
tdqm = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
